--- a/index.html
+++ b/index.html
@@ -1,7 +1,25 @@
-<!doctype>
-<html>
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Beercalc &middot; See how much you earn in beers</title>
+        <link rel="stylesheet" href="/css/style.css"/>
+        <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,100italic,300italic,400italic' rel='stylesheet' type='text/css'>
+    </head>
+    <body>
+        <div class="container">
+            <header>
+                <figure class="beers">
+                    <img src="/img/beer-glasses.png" data-retina="/img/beer-glasses@2x.png" alt="Glasses of beers">
+                </figure>
+                <h1>How many beers do you earn per month?</h1>
+            </header>
+            <main>
+                <input type="text" placeholder="Enter your salary...">
+                <a href="#" class="submit-button js-submit-button">Calculate!</a>
+            </main>
+        </div>
 
-<body>
-</body>
-
+        <script type="text/javascript" src="/js/app.js"></script>
+    </body>
 </html>
