--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
+---
+---
 <!doctype html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <title>Beercalc &middot; See how much you earn in beers</title>
         <link rel="stylesheet" href="/css/style.css"/>
+        <!-- Disabled for the purpose of local testing (page load time was fucked up when using localhost, please uncomment if you see this) -->
         <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,100italic,300italic,400italic' rel='stylesheet' type='text/css'>
     </head>
     <body>
@@ -15,11 +18,21 @@
                 <h1>How many beers do you earn per month?</h1>
             </header>
             <main>
-                <input type="text" placeholder="Enter your salary...">
-                <a href="#" class="submit-button js-submit-button">Calculate!</a>
+                <input type="text" class="salary-input js-salary-input" placeholder="Enter your salary...">
+                <select class="salary-country js-salary-country">
+                    <option value="nl" selected>The Netherlands</option>
+                </select>
+
+                <h1 class="js-salary-output"></h1>
             </main>
         </div>
 
+        <script type="text/javascript">
+            window.beerData = {{ site.data.beer.prices | jsonify }};
+        </script>
+        <script type="text/javascript" src="/js/Retina.js"></script>
+        <script type="text/javascript" src="/js/BeerCalc.js"></script>
         <script type="text/javascript" src="/js/app.js"></script>
     </body>
 </html>
+<!-- 'Beer' is not the answer. 'Beer' is the question, 'Yes' is the answer. -->
