Added options in the select. Added data.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
----
----
 <!doctype html>
 <html lang="en">
     <head>
@@ -21,6 +19,13 @@
                 <input type="text" class="salary-input js-salary-input" placeholder="Enter your salary...">
                 <select class="salary-country js-salary-country">
                     <option value="nl" selected>The Netherlands</option>
+                    <option value="es" selected>Spain</option>
+                    <option value="de" selected>Germany</option>
+                    <option value="uk" selected>United Kingdom</option>
+                    <option value="af" selected>Afghanistan</option>
+                    <option value="al" selected>Albania</option>
+                    <option value="dz" selected>Algeria</option>
+                    <option value="ad" selected>Andorra</option>
                 </select>
 
                 <h1 class="js-salary-output"></h1>
